re-factoring - code clean up